--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "vue-cli-service lint",
+    "test": "playwright test"
   },
   "dependencies": {
+    "@clerk/nuxt": "^1.0.8",
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.15.4",
+    "@playwright/test": "^1.49.1",
     "dotenv": "^16.4.7",
-    "mongodb": "^6.12.0",
-    "vitest": "^3.0.2"
+    "mongodb": "^6.12.0"
   }
 }
