--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@clerk/nuxt": "^1.0.8",
+    "@nuxtjs/tailwindcss": "^6.13.1",
     "nuxt": "^3.15.2",
     "vue": "latest",
     "vue-router": "latest"
